Fixed homepage text alignment on mobile

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -27,6 +27,7 @@ h1 {
 
 p {
     margin: 4px 0px 0px 0px;
+    text-align: center;
 }
 
 @media screen and (max-width: 920px) {
